# ayatana-indicator-appmenu

./: Makefile.am  configure.ac
.tx/: config
data/: Makefile.am  org.ayatana.indicator.appmenu.gschema.xml
debian/: ayatana-indicator-appmenu-tools.install  ayatana-indicator-appmenu.install  changelog  control
po/: POTFILES.in  af.po  am.po  an.po  ar.po  ast.po  ayatana-indicator-appmenu.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  cv.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  (+79 more)
scripts/: Makefile.am
src/: Makefile.am  application-menu-registrar.xml  application-menu-renderer.xml  indicator-appmenu.c  window-menu-dbusmenu.c  window-menu-model.c  window-menu.h
tools/: Makefile.am
